# RATDCS

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  Name.txt  README.md  TESTING.md  docker-compose.yml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: ci.yml  deploy.yml
config/: default.yaml  development.yaml  production.yaml
data/processed/: README.md
data/raw/: README.md
docker/: Dockerfile.asteroid-detector  Dockerfile.debris-predictor  Dockerfile.exoplanet-classifier  Dockerfile.inference-server  Dockerfile.rl-controller
docs/: ARCHITECTURE.md  DATA_ACQUISITION.md  FEATURE_EXTRACTION.md
kubernetes/deployments/: asteroid-detector-deployment.yaml
kubernetes/namespaces/: ratdcs-namespaces.yaml
monitoring/prometheus/: alert_rules.yml  prometheus.yml
src/: __init__.py
src/api/: __init__.py
src/api/routers/: __init__.py
src/api/schemas/: __init__.py
src/data/: __init__.py  download_all_data.py  kepler_downloader.py  tess_downloader.py  ztf_downloader.py
src/decision/: __init__.py
src/decision/fault_tolerant/: __init__.py
src/decision/rl_controller/: __init__.py
src/decision/threat_fusion/: __init__.py
src/detection/: __init__.py  batch_processor.py  extract_all_features.py  feature_extractor.py  feature_selection.py  preprocess.py
src/detection/asteroid/: __init__.py
src/detection/debris/: __init__.py
src/detection/exoplanet/: __init__.py
src/integration/: __init__.py
src/integration/ccsds/: __init__.py
src/integration/grpc/: __init__.py
src/integration/kafka/: __init__.py
src/utils/: __init__.py
tests/: __init__.py  conftest.py
tests/fixtures/: __init__.py
tests/integration/: __init__.py
tests/performance/: __init__.py
tests/unit/: __init__.py
tests/unit/data/: test_kepler_downloader.py  test_tess_downloader.py  test_ztf_downloader.py
tests/unit/detection/: __init__.py  test_feature_extractor.py  test_feature_selection.py  test_preprocess.py
tests/validation/: __init__.py
